--- a/StudyOn/css/style.css
+++ b/StudyOn/css/style.css
@@ -91,3 +91,9 @@ li {
 .footer_menu {
     text-align: center;
 }
+img {
+    position: absolute;
+    left: 500px;
+    top: 100px;
+    z-index: -1;
+}
