--- a/StudyOn/css/style.css
+++ b/StudyOn/css/style.css
@@ -7,6 +7,15 @@
     background: rgba(255, 255, 255, 0.5);
     box-shadow: 0px 0px 0px #888888;
 }
+#fb_login_button {
+    width: 80px;
+}
+#fb_login_button span,
+#fb_login_button iframe {
+    width: 80px! important;
+    height: 25px! important;
+}
+
 h1 {
     font-family: 'Oswald', sans-serif;
     font-weight: 400;
