--- a/StudyOn/css/style.css
+++ b/StudyOn/css/style.css
@@ -1,11 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald);
 #content {
     margin: 5px auto;
-    width: 3000px;
-    text-align: left;
+    width: 1400px;
+    text-align: center;
     background-color:rgb(255, 255, 255);
     background: rgba(255, 255, 255, 0.5);
-    box-shadow: 10px 5px 5px #888888;
+    box-shadow: 0px 0px 0px #888888;
 }
 h1 {
     font-family: 'Oswald', sans-serif;
