--- a/StudyOn/css/style.css
+++ b/StudyOn/css/style.css
@@ -64,3 +64,9 @@ h3 {
     background: rgba(255, 255, 255, 0.5);
     box-shadow: 10px 5px 5px #888888;
 }
+
+.accordion-navigation{
+    background-color:rgb(255, 255, 255);
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 5px 5px 5px #888888;
+}
