--- a/StudyOn/css/style.css
+++ b/StudyOn/css/style.css
@@ -70,3 +70,9 @@ h3 {
     background: rgba(255, 255, 255, 0.5);
     box-shadow: 5px 5px 5px #888888;
 }
+
+.footer {
+    background-color:rgb(255, 255, 255);
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 0px 0px #888888;
+}
