--- a/StudyOn/css/style.css
+++ b/StudyOn/css/style.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald);
 #content {
     margin: 5px auto;
-    width: 1400px;
+    width: 100%;
     text-align: center;
     background-color:rgb(255, 255, 255);
     background: rgba(255, 255, 255, 0.5);
