--- a/StudyOn/css/style.css
+++ b/StudyOn/css/style.css
@@ -49,6 +49,7 @@ h2 {
     font-family: 'Oswald', sans-serif;
     font-weight: 100;
     font-size: 30px;
+    text-align: center;
 }
 
 body {
@@ -75,4 +76,8 @@ h3 {
     background-color:rgb(255, 255, 255);
     background: rgba(255, 255, 255, 0.5);
     box-shadow: 0px 0px 0px #888888;
+}
+
+.NewSessionButton{
+    text-align: center;
 }
