--- a/StudyOn/css/style.css
+++ b/StudyOn/css/style.css
@@ -59,7 +59,7 @@ body {
 
 h3 {
     margin: 5px auto;
-    width: 3000px;
+    width: 100%;
     text-align: left;
     background-color:rgb(255, 255, 255);
     background: rgba(255, 255, 255, 0.5);
@@ -73,11 +73,21 @@ h3 {
 }
 
 .footer {
+    text-align: center;
     background-color:rgb(255, 255, 255);
     background: rgba(255, 255, 255, 0.5);
     box-shadow: 0px 0px 0px #888888;
 }
 
 .NewSessionButton{
+    text-align: center;
+}
+
+li {
+    background-color: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, 0.5);
+}
+
+.footer_menu {
     text-align: center;
 }
